# api-aggregator

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.en.md  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt  start.py
.github/workflows/: ci.yml  release.yml
docs/en/: dashboard-http-api.md  docker.md  virtualenv.md
docs/zh-CN/: api-data-schema.md  dashboard-http-api.md  docker.md  virtualenv.md
pool_files/: api_pool_default.json
presets/: builtin_apis.json
scripts/: bootstrap.ps1  check_encoding.py
src/api_aggregator/: __init__.py  config.py  database.py  log.py  main.py  model.py  scheduler.py
src/api_aggregator/dashboard/: __init__.py  server.py
src/api_aggregator/dashboard/assets/css/: page.css
src/api_aggregator/dashboard/assets/js/: i18n.js  page.js
src/api_aggregator/dashboard/templates/: page.html
src/api_aggregator/dashboard/templates/editor/: api_form.html  site_form.html
src/api_aggregator/data/: api_pool.json  site_pool.json
src/api_aggregator/data_service/: __init__.py  local_data.py  remote_data.py  request_result.py
src/api_aggregator/entry/: api_entry.py  api_mgr.py  site_entry.py  site_mgr.py
src/api_aggregator/service/: __init__.py  api_delete_service.py  api_test_service.py  file_access_service.py  pool_io_service.py  runtime_control_service.py  update_service.py
src/api_aggregator/source/: builtin_sites.json
tests/: test_api_entry_manager.py  test_pool_io_service.py  test_scheduler_service.py
tests/e2e/: dashboard.modal.spec.js
(+12 files in other folders)
